<resources>
    <string name="app_name">Bestbuy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_theater" translatable="true">tv and home theater </string>
    <string name="computer_talets" translatable="true">Computer and Tablets </string>
    <string name="movies_music" translatable="true">Movies and Music </string>
    <string name="video_games" translatable="true">Video Games </string>
    <string name="mobiles" translatable="true">Mobiles </string>
    <string name="tag" translatable="false">tag</string>
    <string name="internet" translatable="false">internet problem</string>
    <string name="internetMessage" translatable="true">you arent connected to the internet !
    check your internet settings or press ok to turn the wifi on
    </string>
    <string name="all_products" translatable="true">all products</string>
    <string name="search_results">search results</string>
    <string name="no_item_found">no product found</string>
    <string name="available_online">available online</string>
    <string name="not_available">not available online</string>

    <!--autocomplet-->
    <string name="search_products">search </string>

     <!--TextViews-->
    <string name="footer_text">no more products to display</string>
    <string name="salePrice">salePrice</string>
    <string name="priceMin">enter the minimum price</string>
    <string name="priceMax">enter the maximum price</string>



    <!--buttons-->
    <string name="sortPrice">price</string>
    <string name="sortRatings">reviews</string>
    <string name="categories_dialog">select categories</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="current_selection">your current selection</string>
    <string name="reset">Reset All</string>
    <string name="narrow_down_results">Narrow Your Results By</string>
    <string name="curren_offers">Current Offers</string>
    <string name="brands">Brands</string>
    <string name="status">Status</string>
    <string name="category">Category</string>
    <string name="filter">Filter</string>
    <string name="onSale">products On Sale</string>
    <string name="storeLocator">Store Locator</string>
    <string name="wishList">Wish List</string>
    <string name="settings">Settings</string>
    <string name="addedToWishList">product added to wish list</string>
    <string name="removedFromWishList">product removed from wish list</string>
    <string name="removeFromWishList">remove from wishlist</string>
    <string name="addeToWishList">add to wishList</string>
    <string name="default_list">default list</string>
    <string name="Create_new_list">Create a New List</string>
    <string name="list_name">List Name</string>
    <string name="alreadyExists">already exists</string>
    <string name="choose_list">choose a list to add it to</string>
    <string name="makeDefault">default list</string>
    <string name="makeDefaultMessage">would you want to make this list as default list</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="removeDefaultDialog">would you want to remove this list as a default dialog</string>
    <string name="no_product_in_wishList">you don\'t have any product in the wishList</string>
    <string name="loadingStores">loading Stores</string>
    <string name="address">address</string>
    <string name="phone">phone</string>
    <string name="Services">Services</string>
    <string name="storeDetails">Store Details</string>
    <string name="hours">hours</string>
    <string name="getDirections">Get Directions</string>
    <string name="enableGps">Gps isnt  enable do you want to go to settings</string>
    <string name="gps">gps</string>
    <string name="footer_store_text">no more stores to display</string>
    <string name="details">details</string>
    <string name="name">name</string>
    <string name="cast">cast</string>
    <string name="save">save</string>
    <string name="notifications">notifications</string>
    <string name="notifTitle">wishList changed</string>
    <string name="notifContentAdded">product added </string>
    <string name="notifTextAdd">new product has been added to wishList</string>
    <string name="notifContentDeleted">product Deleted</string>
    <string name="notifTextDeleted">a product has been deleted from the  wishList</string>
    <string name="soldAndShipped">sold and shipped by BestBuy</string>
    <string name="onLineOnly">Only sold online</string>
    <string name="addToCart">add to cart</string>
    <string name="ratingCount">rating count</string>
    <string name="homeTheater">tv and home theater</string>
    <string name="price">price</string>
    <string name="string_done">string/done</string>
    <string name="done">Done</string>
    <string name="noDescription">No Description available</string>
    <string name="inStore">item only available in store</string>
    <string name="loadingProducts">loading products</string>
    <string name="loadMore">Load More</string>
    <string name="loading">Loading</string>
    <string name="home">Home</string>
    <string name="bestSellings">BestSellings</string>


</resources>
