<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        layout="@layout/grey_toolbar"
        android:id="@+id/search"
        ></include>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingTop="12dp"
        android:textAlignment="center"
        android:id="@+id/currentSelection"
        android:text="@string/current_selection"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="#e0dbdb"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/selection"
                android:orientation="vertical">


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reset"
                    android:src="@drawable/reset_24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:id="@+id/resetAll"
                    android:textSize="16sp"
                    android:layout_marginTop="17dp"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textAlignment="center"
                android:paddingTop="15dp"
                android:textStyle="bold"
                android:text="@string/narrow_down_results"
                android:background="#e0dbdb"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/add_24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/currentOffersAdd"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/curren_offers"
                    android:textSize="16sp"
                    android:id="@+id/currentOffers"
                    android:layout_marginTop="17dp"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#333">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/add_24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/brandsAdd"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brands"
                    android:textSize="16sp"
                    android:id="@+id/brands"
                    android:layout_marginTop="17dp"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#333">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/add_24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/statusAdd"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:id="@+id/status"
                    android:textSize="16sp"
                    android:layout_marginTop="17dp"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#333">

            </View>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/price"
                android:layout_marginBottom="10dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/add_24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/priceAdd"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:id="@+id/salePriceAdd"
                    android:textSize="16sp"
                    android:layout_marginTop="17dp"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#333"
                android:id="@+id/pri">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/categories"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/add_24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/categoryAdd"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:id="@+id/category"
                    android:textSize="16sp"
                    android:layout_marginTop="17dp"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#333"
                android:id="@+id/cat">

            </View>
        </LinearLayout>


    </LinearLayout>
    </ScrollView>

</LinearLayout>
